translation-tool/inputs/source_meta/objects/HnsSiteAttributeAudits__x.object
<CustomObject>
    <description>HNSSITEATTRIBUTEAUDITS</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HNSSITEATTRIBUTEAUDITS</externalName>
    <fields>
        <fullName>CENTRAL_DB_ID__c</fullName>
        <description>CENTRAL_DB_ID</description>
        <externalDeveloperName>CENTRAL_DB_ID</externalDeveloperName>
        <label>Central DB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_AUDIT_ID__c</fullName>
        <description>Z_AUDIT_ID</description>
        <externalDeveloperName>Z_AUDIT_ID</externalDeveloperName>
        <label>Audit ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_COLUMNDESCR__c</fullName>
        <description>Z_COLUMNDESCR</description>
        <externalDeveloperName>Z_COLUMNDESCR</externalDeveloperName>
        <label>Feature Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_COLUMNNAME__c</fullName>
        <description>Z_COLUMNNAME</description>
        <externalDeveloperName>Z_COLUMNNAME</externalDeveloperName>
        <label>Feature Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_NEW_VALUE__c</fullName>
        <description>Z_NEW_VALUE</description>
        <externalDeveloperName>Z_NEW_VALUE</externalDeveloperName>
        <label>New Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_OBJECT_ID__c</fullName>
        <description>Z_OBJECT_ID</description>
        <externalDeveloperName>Z_OBJECT_ID</externalDeveloperName>
        <label>Object ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_OBJECT_TYPE__c</fullName>
        <description>Z_OBJECT_TYPE</description>
        <externalDeveloperName>Z_OBJECT_TYPE</externalDeveloperName>
        <label>Object Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_ORIGINAL_VALUE__c</fullName>
        <description>Z_ORIGINAL_VALUE</description>
        <externalDeveloperName>Z_ORIGINAL_VALUE</externalDeveloperName>
        <label>Original Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_ROW_CHANGED_BY__c</fullName>
        <description>Z_ROW_CHANGED_BY</description>
        <externalDeveloperName>Z_ROW_CHANGED_BY</externalDeveloperName>
        <label>Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_ROW_DATE_CHANGED__c</fullName>
        <description>Z_ROW_DATE_CHANGED</description>
        <externalDeveloperName>Z_ROW_DATE_CHANGED</externalDeveloperName>
        <label>Modified Date</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>HNSSITEATTRIBUTEAUDITS</label>
    <pluralLabel>HNSSITEATTRIBUTEAUDITS</pluralLabel>
</CustomObject>